<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="default_token">1065593359295-ea1blp8cj9ruhl5o72tfoecnn05v1m5f.apps.googleusercontent.com</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>
    <string name="signin_with_google">SignIn with Google</string>
    <string name="login_with_google">LogIn with Google</string>
    <string name="log_out">Log Out</string>
</resources>