<?xml version="1.0" encoding="utf-8"?>
<MotionScene 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        motion:constraintSetEnd="@+id/logIn"
        motion:constraintSetStart="@id/signIn"
        motion:duration="500">
       <KeyFrameSet>
       </KeyFrameSet>
    </Transition>

    <ConstraintSet android:id="@+id/signIn">
    </ConstraintSet>

    <ConstraintSet android:id="@+id/logIn">
        <Constraint
            android:id="@+id/textInputName"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            motion:layout_constraintBottom_toTopOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />
        <Constraint
            android:id="@+id/signInBtn"
            motion:attributeName="text"
            motion:customStringValue="@string/login"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            motion:layout_constraintTop_toBottomOf="@+id/textInputPassword"
            motion:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/basic_margin" />
        <Constraint
            android:id="@+id/signInGoogle"
            android:text="@string/login_with_google"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            motion:layout_constraintTop_toBottomOf="@+id/signInBtn"
            motion:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/basic_margin" />
        <Constraint
            android:text="@string/signin"
            android:id="@+id/logIn"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />
        <Constraint
            motion:layout_constraintVertical_bias="0.40"
            android:id="@+id/textInputEmail"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />
    </ConstraintSet>
</MotionScene>